build_errors.txt
    Checking mtt-file-manager v0.1.0 (C:\Users\mtamu\github\MTT-File-Manager-RUST)
warning: unused import: `crate::application::file_operations`
 --> src\app\operations_new\context_menu.rs:8:5
  |
8 | use crate::application::file_operations;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
System.Management.Automation.RemoteException
warning: unused import: `Path`
 --> src\app\operations_new\folder_loading.rs:5:17
  |
5 | use std::path::{Path, PathBuf};
  |                 ^^^^
System.Management.Automation.RemoteException
warning: unused import: `crate::infrastructure::onedrive`
  --> src\app\operations_new\message_handler.rs:11:5
   |
11 | use crate::infrastructure::onedrive;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
System.Management.Automation.RemoteException
error[E0277]: the trait bound `Option<Com::IBindCtx>: Param<Com::IBindCtx, InterfaceType>` is not satisfied
    --> src\infrastructure\windows\icons.rs:269:75
     |
 269 |             if let Ok(shell_item) = SHCreateItemFromParsingName::<PCWSTR, Option<IBindCtx>, IShellItem>(PCWSTR(path_wide.as_ptr()), None) {
     |                                                                           ^^^^^^^^^^^^^^^^ the trait `Param<Com::IBindCtx, InterfaceType>` is not implemented for `Option<Com::IBindCtx>`
     |
     = help: the trait `Param<Com::IBindCtx, InterfaceType>` is not implemented for `Option<Com::IBindCtx>`
             but it is implemented for `Option<&Com::IBindCtx>`
     = help: for that trait implementation, expected `&Com::IBindCtx`, found `Com::IBindCtx`
note: required by a bound in `Shell::SHCreateItemFromParsingName`
    --> C:\Users\mtamu\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.58.0\src\Windows\Win32\UI\Shell\mod.rs:2786:9
     |
2783 | pub unsafe fn SHCreateItemFromParsingName<P0, P1, T>(pszpath: P0, pbc: P1) -> windows_core::Result<T>
     |               --------------------------- required by a bound in this function
...
2786 |     P1: windows_core::Param<super::super::System::Com::IBindCtx>,
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SHCreateItemFromParsingName`
System.Management.Automation.RemoteException
error[E0277]: the trait bound `Option<Com::IBindCtx>: Param<Com::IBindCtx, InterfaceType>` is not satisfied
    --> src\infrastructure\windows\icons.rs:332:75
     |
 332 |             if let Ok(shell_item) = SHCreateItemFromParsingName::<PCWSTR, Option<IBindCtx>, IShellItem>(PCWSTR(path_wide.as_ptr()), None) {
     |                                                                           ^^^^^^^^^^^^^^^^ the trait `Param<Com::IBindCtx, InterfaceType>` is not implemented for `Option<Com::IBindCtx>`
     |
     = help: the trait `Param<Com::IBindCtx, InterfaceType>` is not implemented for `Option<Com::IBindCtx>`
             but it is implemented for `Option<&Com::IBindCtx>`
     = help: for that trait implementation, expected `&Com::IBindCtx`, found `Com::IBindCtx`
note: required by a bound in `Shell::SHCreateItemFromParsingName`
    --> C:\Users\mtamu\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.58.0\src\Windows\Win32\UI\Shell\mod.rs:2786:9
     |
2783 | pub unsafe fn SHCreateItemFromParsingName<P0, P1, T>(pszpath: P0, pbc: P1) -> windows_core::Result<T>
     |               --------------------------- required by a bound in this function
...
2786 |     P1: windows_core::Param<super::super::System::Com::IBindCtx>,
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SHCreateItemFromParsingName`
System.Management.Automation.RemoteException
warning: variable does not need to be mutable
   --> src\ui\preview_panel.rs:182:17
    |
182 |             let mut add_detail = |ui: &mut egui::Ui, label: &str, value: String| {
    |                 ----^^^^^^^^^^
    |                 |
    |                 help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default
System.Management.Automation.RemoteException
warning: unused variable: `is_renaming`
  --> src\ui\toolbar.rs:43:5
   |
43 |     is_renaming: bool,
   |     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_renaming`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
System.Management.Automation.RemoteException
For more information about this error, try `rustc --explain E0277`.
warning: `mtt-file-manager` (lib) generated 5 warnings
error: could not compile `mtt-file-manager` (lib) due to 2 previous errors; 5 warnings emitted
